Initial implementation of leaderboard for web and edit quiz
Implemented large parts of editing the declare allegiance quiz.

--- a/web/index.html
+++ b/web/index.html
@@ -157,6 +157,7 @@
   <script src="/src/bridge/remote/firestore/classmodels/message.js"></script>
   <script src="/src/bridge/remote/firestore/classmodels/mission.js"></script>
   <script src="/src/bridge/remote/firestore/classmodels/player.js"></script>
+  <script src="/src/bridge/remote/firestore/classmodels/quizquestion.js"></script>
   <script src="/src/bridge/remote/firestore/classmodels/reward.js"></script>
   <script src="/src/bridge/remote/firestore/classmodels/user.js"></script>
   <script src="/src/bridge/remote/firestore/firestoreoperations.js"></script>
@@ -167,6 +168,7 @@
   <script src="/src/bridge/remote/firestore/constants/grouppath.js"></script>
   <script src="/src/bridge/remote/firestore/constants/missionpath.js"></script>
   <script src="/src/bridge/remote/firestore/constants/playerpath.js"></script>
+  <script src="/src/bridge/remote/firestore/constants/quizpath.js"></script>
   <script src="/src/bridge/remote/firestore/constants/rewardpath.js"></script>
   <script src="/src/bridge/remote/firestore/constants/userpath.js"></script>
 
@@ -232,6 +234,8 @@
   <link rel="import" href="/src/gamestats/stats-page.html">
   <link rel="import" href="/src/guns/guns.html">
   <link rel="import" href="/src/infect/infect.html">
+  <link rel="import" href="/src/leaderboard/leaderboard-item.html">
+  <link rel="import" href="/src/leaderboard/leaderboard-page.html">
   <link rel="import" href="/src/leaderboard/leaderboard-summary.html">
   <link rel="import" href="/src/lookup/group-field.html">
   <link rel="import" href="/src/lookup/lookup.html">
@@ -259,6 +263,10 @@
   <link rel="import" href="/src/profile/dialog-give-reward.html">
   <link rel="import" href="/src/profile/profile-page.html">
   <link rel="import" href="/src/profile/reward-badge.html">
+  <link rel="import" href="/src/quiz/edit-quiz-page.html">
+  <link rel="import" href="/src/quiz/edit-quiz-item.html">
+  <link rel="import" href="/src/quiz/edit-quiz-question-dialog.html">
+  <link rel="import" href="/src/quiz/edit-quiz-answer-item.html">
   <link rel="import" href="/src/registration/game-registration.html">
   <link rel="import" href="/src/interview/multi-choice-page.html">
   <link rel="import" href="/src/interview/multiple-choice.html">
@@ -271,6 +279,7 @@
   <link rel="import" href="/src/rewards/admin-reward-dialog.html">
   <link rel="import" href="/src/rewards/reward-category-selector.html">
   <link rel="import" href="/src/rewards/reward-item.html">
+  <link rel="import" href="/src/rewards/reward-icon.html">
   <link rel="import" href="/src/ui/alert.html">
   <link rel="import" href="/src/ui/card.html">
   <link rel="import" href="/src/ui/dashboard.html">
