--- a/web/src/lookup/group-field.html
+++ b/web/src/lookup/group-field.html
@@ -118,7 +118,7 @@
       cursor: pointer;
     }
 
-    #dialog {
+    :host #dialog {
       display: flex;
       flex-direction: column;
       width: 320px;
