--- a/web/src/lookup/player-dialog.html
+++ b/web/src/lookup/player-dialog.html
@@ -85,7 +85,7 @@
     });
   </script>
   <style>
-    #dialog {
+    :host #dialog {
       display: flex;
       flex-direction: column;
       width: 320px;
