--- a/web/src/lookup/search-player-dialog.html
+++ b/web/src/lookup/search-player-dialog.html
@@ -127,7 +127,7 @@
     });
   </script>
   <style>
-    #dialog {
+    :host #dialog {
       display: flex;
       flex-grow: 1;
       flex-direction: column;
