--- a/web/src/profile/dialog-change-allegiance.html
+++ b/web/src/profile/dialog-change-allegiance.html
@@ -61,7 +61,7 @@
       display: block;
     }
 
-    #dialog {
+    :host #dialog {
       display: flex;
       flex-direction: column;
       width: 320px;
