--- a/web/src/form/form.html
+++ b/web/src/form/form.html
@@ -140,7 +140,9 @@
       }
 
       .form-contents {
-        padding: 16px;
+        padding-left: 16px;
+        padding-right: 16px;
+        padding-top: 16px;
         background: white;
       }
 
